--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
   <body class="bg-slate-100">
-    <div class="flex items-center justify-center mt-20 ">
+    <div class="flex items-center justify-center mt-20 sm:flex-wrap ">
     <div class="left -mt-12 mr-14">
       <img class="w-[320px] -mb-5" src="logo.png.png" alt="" />
       <p class="mx-8 text-3xl -my-1">
